--- a/coffee_project_cleaning_EDA_Romain-Pietro.ipynb
+++ b/coffee_project_cleaning_EDA_Romain-Pietro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8446,6 +8446,22 @@
     "    yaxis_title='Average Total Cup Points',\n",
     "    showlegend = False)\n",
     "fig_cup.add_hline(y=80, line_width=3, line_dash='solid', line_color='red')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Post-EDA modifications"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv('./src/Coffee_dataset_cleaned_column_and_rows.csv')"
    ]
   }
  ],
